--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 version' css/style.concat.css -o css/style.prefix.css"
-
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.concat.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.min.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,6 @@
   },
   "author": "DmytroNakonechnyi",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Vayren/Natours/issues"
-  },
-  "homepage": "https://github.com/Vayren/Natours#readme",
   "devDependencies": {
     "autoprefixer": "^9.8.0",
     "concat": "^1.0.3",
